# freesweep

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  acconfig.h  autogen.sh  bests.c  clear.c  config.h.in  configure  configure.ac  configure.in  defaults.h  drawing.c  error.c  fgui.c  files.c  freesweep.6  freesweep.6.in  game.c  gpl.c  image.c  logs.c  main.c  pause.c  pbests.c  play.c  sl.c  stats.c  sweep.h  sweep.h.in  sweeprc.in  themes.c  tick.c  utils.c  xdg.c
tags/release-0-0/: Makefile  bests.c  drawing.c  hash.c  minesrc  play.c  sweeprc
trunk/: CHANGES  Makefile  Makefile.in  README  acconfig.h  clear.c  config.h.in  configure  configure.in  defaults.h  drawing.c  error.c  fgui.c  files.c  freesweep.6  freesweep.6.in  game.c  gpl.c  image.c  main.c  pbests.c  play.c  sl.c  stats.c  sweep.h  sweep.h.in  tick.c  utils.c
