dnl Process this file with autoconf to produce a configure script.
AC_INIT(sweep.h.in)

dnl Find out where we're building
AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_CC
AC_PROG_LN_S
AC_PROG_MAKE_SET
dnl AC_PATH_PROG(DATE, date)

dnl Look for ncurses in a variable.
AC_ARG_WITH(ncurses, [  --with-ncurses=DIR      path to the ncurses drawing package ], NCURSES=$with_ncurses, NCURSES=/usr/local)

if test "$NCURSES" = "no" ; then
	LIBS="-lcurses $LIBS"
else
	dnl Linux uses ncurses, but not in /usr/local
	if test "$host_os" = 'linux' ; then
		NCURSES=/usr
	fi

	dnl Set CFLAGS right.
	CFLAGS="-I$NCURSES/include -I/usr/local/include $CFLAGS"
	AC_SUBST(NCURSES)

	dnl Look in $NCURSES/lib for libraries
	LIBS="-L$NCURSES/lib -L/usr/local/lib $LIBS"

	dnl Replace `main' with a function in -lncurses:
	AC_CHECK_LIB(ncurses,main)

	if test "$ac_cv_lib_ncurses_main" = 'no' ; then
		LIBS="-lcurses $LIBS"
	fi
fi

dnl Checks for libraries.
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m,main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(strings.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_CHECK_FUNC(snprintf, AC_DEFINE(HAVE_SNPRINTF))
AC_CHECK_FUNCS(strdup)
AC_CHECK_FUNCS(memset)
AC_CHECK_FUNCS(memmove)

AC_OUTPUT(Makefile sweep.h)
