dnl Process this file with autoconf to produce a configure script.
AC_INIT(sweep.h.in)

dnl Find out where we're building
AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_CC
AC_PROG_LN_S
AC_PROG_MAKE_SET

dnl Look for ncurses in a variable.
AC_ARG_WITH(ncurses, [  --with-ncurses=[/usr/local] path to the ncurses drawing package ], NCURSES_HINT=$with_ncurses, NCURSES_HINT='default')

AC_SUBST(NCURSES_HINT)

dnl Checks for libraries.
dnl look for ncurses in the suggested location, if given.
if test "$NCURSES_HINT" = "no" ; then
	AC_CHECK_LIB(curses,main)
else
	if test "$NCURSES_HINT" = 'yes' || test "$NCURSES_HINT" = 'default' ; then

		dnl Linux uses ncurses, but not in /usr/local
		if test "$host_os" = linux ; then
			NCURSES_HINT=/usr
		else
			dnl Set NCURSES_HINT to /usr/local, which is it's default.
			NCURSES_HINT=/usr/local
		fi
	fi

	CFLAGS="-I$NCURSES_HINT/include $CFLAGS"
	AC_SUBST(NCURSES_HINT)

	dnl Look in $NCURSES_HINT/lib for libraries
	LIBS="-L$NCURSES_HINT/lib $LIBS"

	dnl Replace `main' with a function in -lncurses:
	AC_CHECK_LIB(ncurses,main)

	if test "$ac_cv_lib_ncurses_main" = 'no' ; then
		AC_CHECK_LIB(curses,main)
	fi
fi

dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m,main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(strings.h unistd.h sys/file.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(snprintf)
AC_CHECK_FUNCS(getopt)
AC_CHECK_FUNCS(strdup)
AC_CHECK_FUNCS(memset)
AC_CHECK_FUNCS(memmove)
AC_CHECK_FUNCS(flock)
AC_CHECK_FUNCS(lockf)
AC_CHECK_FUNCS(fileno)

AC_OUTPUT(Makefile sweep.h)
